[DS-707] Use valueOf instead of Number constructor
git-svn-id: http://scm.dspace.org/svn/repo/dspace/trunk@5500 9c30dcfa-912a-0410-8fc2-9e0234be79fd